# tpm-quote-tools

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README_win32.txt  autotools-clean.sh  bootstrap.sh  configure.ac  control  createek.c  getcodeset.c  loadkey.c  pcr_mask.c  quote.c  quote_nonce.c  takeownership.c  tidy.c  toutf16le.c  tpm-quote-tools.spec.in  tpm_getpcrhash.8  tpm_getpcrhash.c  tpm_getquote.8  tpm_getquote.c  tpm_loadkey.8  tpm_loadkey.c  tpm_mkaik.8  tpm_mkaik.c  tpm_mkuuid.8  tpm_mkuuid.c  tpm_quote_tools.8  tpm_unloadkey.8  tpm_unloadkey.c  tpm_updatepcrhash.8  tpm_updatepcrhash.c  tpm_verifyquote.8  tpm_verifyquote.c  tss_err.c  win32.txt
include/tss/: platform.h
